--- a/app/views/collections/_collection_teaser.html.erb
+++ b/app/views/collections/_collection_teaser.html.erb
@@ -1,7 +1,7 @@
 <%# Note this file could not be called simply _collection because that is used for search results %>
 <div class="collection">
   <%= link_to collection_path(presenter.id) do %>
-    <%= image_tag "collections/dummy_collection.jpg", size: 266 %>
+    <%= image_tag presenter.thumbnail_src, size: "266" %>
     <div class="collection-title-wrapper">
       <p class="collection-title"><%= presenter.title.first %></p>
     </div>
