--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -2,5 +2,5 @@
 <a id="logo" class="navbar-brand" href="<%= sufia.root_path %>" data-no-turbolink="true">
   <%= image_tag "chf_logo_white.svg", class: "visible-xs", alt: "Chemical Heritage Foundation logo", id: "masthead-logo-image" %>
   <%= image_tag "chf_logo_name_white.svg", class: "hidden-xs", alt: "Chemical Heritage Foundation logo", id: "masthead-logo-image" %>
-  <div id="masthead-application-name" class="hidden-xs"><%= application_name.upcase %></div>
+  <div id="masthead-application-name" class="hidden-xs">DIGITAL COLLECTIONS</div>
 </a>
